Source/WebGPU/WGSL/tests/valid/for.wgsl
// RUN: %wgslc

fn testForStatement() {
    for (var x = -1; x <= 1;) {
    }
}
